force-app/main/default/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keynote room</fullName>
                </value>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>Breakout room A</fullName>
                </value>
                <value>
                    <fullName>Breakout room B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_and_Time__c</columns>
        <columns>Room__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>